# ReverseCRC

./: .gitignore  LICENSE  README.md
doc/: generate_small.sh  measurebindings.py
src/: find.py  find.sh  generateData.py  generatedata.py  main.py  profile.sh  requirements.txt  runTests.sh  runtests.py  test_runner.py
src/crc/: crcproc.py  divisioncrc.py  divisioncrcbackward.py  fasthwcrc.py  flush.py  hwcrc.py  hwcrcbackward.py  input.py  lookupcrc.py  modcrc.py  numbermask.py
src/crc/solver/: __init__.py  backward.py  bruteforce.py  bruteforcepairs.py  common.py  polys.py  reverse.py  verify.py
src/fastcrc/: __init__.py  binding.py  generate_lookup8.py  paths.py  utils.py
src/fastcrc/cffi/: build.py  fastcrc16.py  fastcrc8.py  fastcrc_interface.h
src/fastcrc/clib/: build.sh
src/fastcrc/clib/src/: CMakeLists.txt
src/fastcrc/clib/src/cmake/: purge.cmake
src/fastcrc/clib/src/crchw/: .gitignore  crc16hwinvert.c  crc8hw.c  crc8hw.h  generate_lookup16.py  generate_lookup8.py  vector.h
src/fastcrc/ctypes/: fastcrc.py  fastcrc16.py  fastcrc8.py  utils.py
src/fastcrc/src/crchw/: CMakeLists.txt  concat.h  crc16hw.c  crc16hw.h  crc16hwinvert.c  crc16hwinvert.h  crc8hw.c  crc8hw.h  crc8lookup.h  crchw.c  crchw.h  crcutils.h  generate_lookup16.py  vector.h
src/fastcrc/swig/: build.sh  fastcrc.swg  fastcrc16.py  fastcrc8.py
src/fastcrc/swigoo/: __init__.py  build.sh  fastcrc.swg  fastcrc16.py  fastcrc8.py  fastcrc_interface.h
src/fastcrc/swigraw/: build.sh  fastcrc.swg  fastcrc16.py  fastcrc8.py  fastcrc_interface.h
src/revcrc/: backwardreverse.py  divisioncrcbackward.py  hwcrcbackward.py  input.py  revcommon.py  revcrcmod.py  reverse.py  reversecrc.py
src/revcrc/solver/: backward.py  bruteforce.py  bruteforcepairs.py  common.py  polys.py  reverse.py  verify.py
src/testcrc/: test_crcproc.py  test_divisioncrc.py  test_divisioncrcbackward.py  test_hwcrc.py  test_hwcrcbackward.py  test_input.py  test_lookupcrc.py  test_modcrc.py  test_numbermask.py
src/testcrc/solver/: test_backward.py  test_bruteforce.py  test_bruteforcepairs.py  test_common.py  test_polys.py  test_reverse.py  test_verify.py
src/testfastcrc/: test_utils.py
src/testfastcrc/cffi/: test_fastcrc16.py  test_fastcrc8.py
src/testfastcrc/ctypes/: test_fastcrc.py  test_fastcrc16.py  test_fastcrc8.py  test_utils.py
src/testfastcrc/swig/: test_fastcrc16.py  test_fastcrc8.py
src/testfastcrc/swigoo/: test_fastcrc16.py  test_fastcrc8.py
src/testfastcrc/swigraw/: test_fastcrc16.py  test_fastcrc8.py
src/testrevcrc/: __init__.py  test_backwardreverse.py  test_divisioncrcbackward.py  test_hwcrcbackward.py  test_input.py  test_revcommon.py  test_revcrcmod.py  test_reverse.py  test_reversecrc.py  test_revhwcrc.py
src/testrevcrc/solver/: test_bruteforcepairs.py  test_common.py  test_polys.py
testdata/: d1-4.txt  d1.txt  d1constpre.txt  d1pre.txt  d2.txt  d3.txt  d3constpre.txt  d3post.txt  d3pre.txt
tools/: codecheck.sh  coverage.sh  doccheck.sh  microbenchmark.py  profiler.sh  pylint3.config  typecheck.sh
